--- a/less8.ipynb
+++ b/less8.ipynb
@@ -282,7 +282,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://github.com/Iflgit/GB_TPMS/blob/master/course_project.ipynb"
+   ]
   }
  ],
  "metadata": {
